@@ -7530,8 +7530,9 @@ peer config.</p></div>
 </div></div>
 <h4 id="_shown_inline_pnp">shown_inline_pnp</h4>
 <div class="paragraph"><p>Show inline pnp graph if available. If a service or host has a
-pnp4nagios action url set, Thruk will show a inline graph on the
-extinfo page.</p></div>
+pnp4nagios action or notes url set. Thruk will show a inline graph on the
+extinfo page.
+This works for /pnp4nagios/ urls and /pnp/.</p></div>
 <div class="paragraph"><p>ex.:</p></div>
 <div class="literalblock">
 <div class="content">
@@ -8251,7 +8252,7 @@ You can now add the /home/thruk/var/remote.sock to your thruk_local.conf.</p></d
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2011-09-22 17:16:26 CEST
+Last updated 2011-10-10 18:53:32 CEST
 </div>
 </div>
 </body>
