@@ -1,6 +1,8 @@
 This file documents the revision history for the Monitoring Webinterface Thruk.
 
 1.1.2    ...
+          - added /pnp/ to possible pnp4nagios urls
+          - search in notes_url for pnp4nagios urls too
           - fixed commands using the hours parameter (fixes #50)
 
 1.1.1    Thu Sep 15 14:30:01 CEST 2011
